[package]
name = "mckismetlab-launcher-core"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9.1"
home = "0.5.5"