[package]
name = "mckismetlab-launcher-core"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9.1"
home = "0.5.5"
indicatif = "0.17.6"
futures = "0.3.28"
sha1 = "0.10.5"
zip = "0.6.6"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]